welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: value || is not a member of Int
	talking&&(hour<<7 || hour>>20)
                          ^